Footer-completed and minor changes

--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,18 @@ span:hover{
   color:#ec9a34;
 }
 
+.footer__cards{
+  display: inline-flex;
+  align-items: center;
+  column-gap: .5rem;
+}
+.footer__card{
+  width: 35px;
+}
+img{
+  cursor: pointer;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
