backen-crud-Completed

--- a/src/App.css
+++ b/src/App.css
@@ -98,7 +98,7 @@ button:hover{
   padding-bottom: 90px;
    height: 100;
    width: 100;
-   background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url(./assets/images/coffee-home.png);
+   background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url(./assets/images/home-img.jpeg);
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
